--- a/.config/i3/config
+++ b/.config/i3/config
@@ -108,9 +108,9 @@ bindsym $mod+Control+9 move container to workspace $ws9
 bindsym $mod+Control+0 move container to workspace $wsX
 
 # Pulse Audio volume keys
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ #increase sound volume
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #decrease sound volume
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle # mute sound
 
 # Screen brightness keys
 # (This should work for both acpilight or xbacklight.)
@@ -167,4 +167,3 @@ client.focused          #a275b3 #a275b3 #f8f8f2 #6272a4 #a275b3
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id picom --config ~/.config/i3/picom/picom.conf -b --experimental-backends
 exec_always --no-startup-id .config/polybar/launch.sh --material
-
