--- a/.config/i3/picom/picom.conf
+++ b/.config/i3/picom/picom.conf
@@ -99,7 +99,8 @@ opacity-rule = [
     "99:class_g = 'Shotwell'",
     "99:class_g = 'Gimp-2.10'",
     "99:class_g = 'Ristretto'",
-    "90:class_g = 'Google-chrome'",
+    "99:class_g = 'Google-chrome'",
+    "99:class_g = 'google-chrome'",
     "99:class_g = 'Picture in picture'",
     "99:class_g = 'Designer'",
     "99:class_g = 'MindMaster'",
